# pyqg

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  codecov.yml  index.ipynb  jax_sandbox.ipynb  particles.py  pyproject.toml  requirements.txt  run_the_model.py  setup.cfg  setup.py  tags  test_twolayer_2g.py  test_twolayer_qg.py  twolayer_qg.py  twolayer_qg_flat.py  vis_particles.ipynb
.ipynb_checkpoints/: index-checkpoint.ipynb  setup-checkpoint.py
Kevlahan/: QG_SQG_forced_spectra.ipynb  QG_SQG_spectra.ipynb  QG_SQG_spectra_Nx256.npz
benchmark/: anirban_benchmark.py  benchmark.py
ci/: environment-py27-pyfftw.yml  environment-py27.yml  environment-py3.7-pyfftw.yml  environment-py3.7.yml  environment-py3.8-pyfftw.yml  environment-py3.8.yml  environment-py3.9-pyfftw.yml  environment-py3.9.yml  environment-py35-pyfftw.yml  environment-py35.yml  environment-py36-pyfftw.yml  environment-py36.yml  environment-py37-pyfftw.yml  environment-py37.yml  environment-py38-pyfftw.yml  environment-py38.yml
docs/: Makefile  api.rst  conf.py  development.rst  environment.yml  equations.rst  examples.rst  index.rst  installation.rst  notation_equivalent_barotropic.ipynb  notation_equivalent_barotropic.rst  notation_twolayer_model.ipynb  notation_twolayer_model.rst  preface.rst  requirements.txt  whats-new.rst
examples/: Jets.py  LambDipole.ipynb  McWilliams1984.py  Mcwilliams1984.ipynb  RW.py  SQG_ellipticalvortex.py  debug_the_model.py  diagnostic_normalization.ipynb  multiple_jets.py  profile_fft_sverdrup.ipynb  profile_pyqg.ipynb  pyqg_example.ipynb  rossby_wave.py  run-two-layer-jet-only.py  run-two-layer-surface-jet-rev-s.py  run-two-layer-surface-jet-rev.py  run-two-layer-surface-jet-s-2.py  run-two-layer-surface-jet-s.py  run-two-layer-surface-jet.py  run-two-layer.py  run_the_model.py  run_two-layer.py  test_sqg.py  test_sqg2.py  vis_particles.ipynb  wrap-xarray.ipynb
notebooks/: ADM.ipynb  ADM_stochastic.ipynb
pyqg/: __init__.py  _version.py  bt_model.py  delegate.py  diagnostic_tools.py  errors.py  feature_extractor.py  kernel.pyx  (+16 more)
(+161 files in other folders)
